[gd_scene load_steps=18 format=3 uid="uid://bmuexnk85c7i6"]

[ext_resource type="PackedScene" uid="uid://dmcr3vgewdnce" path="res://ITEM_MODELS/Computer_Desk_And_Drawers/desk.glb" id="1_1r5t1"]
[ext_resource type="Script" uid="uid://cy2dnd7my0rl4" path="res://Scripts/Props/Desk.gd" id="1_t8snj"]
[ext_resource type="Script" uid="uid://w3rojc3jygsq" path="res://Scripts/InteractSnapPoint.gd" id="3_xuif5"]

[sub_resource type="Animation" id="Animation_n5rqm"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("model/desk/cabinet/BOTTOMDRAWER")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.0009238124, -0.22289889, -0.002788186)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lower Fork Point:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-5.878234, 0.9387481, 4.427182)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lower Fork Point:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(7.0897554e-10, -0.6935588, -1.6130333)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Upper Fork Point:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-5.878234, 3.1311338, 4.427182)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Upper Fork Point:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(7.0897554e-10, -0.6935588, -1.6130333)]
}
tracks/5/type = "position_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("model/desk/cabinet/TOPDRAWER")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 0.0011700392, 0.22430347, -0.004678905)

[sub_resource type="Animation" id="Animation_knxvx"]
resource_name = "open_lower_shelf"
length = 0.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("model/desk/cabinet/BOTTOMDRAWER")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.0009238124, -0.22289889, -0.002788186, 0.1333, 1, -0.0009238124, -0.22289889, -0.002788186, 0.5, 1, -0.0009238124, -0.22289889, 0.28349316)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lower Fork Point:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.039352804, 0.09916907),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-5.878234, 0.9387481, 4.427182), Vector3(-5.878234, 0.9387481, 4.294611), Vector3(-5.878234, 0.9387481, 4.194841)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lower Fork Point:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.039352804, 0.09916907),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(7.0897554e-10, -0.6935588, -1.6130333), Vector3(6.799381e-09, -0.90449923, -1.6130333), Vector3(8.161859e-09, -1.0360622, -1.6130333)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.13333334, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"release_lower_fork"
}, {
"args": [],
"method": &"count_open_drawer"
}]
}

[sub_resource type="Animation" id="Animation_l3xc0"]
resource_name = "open_upper_drawer"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Upper Fork Point:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.297687),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-5.878234, 3.1311338, 4.427182), Vector3(-5.909261, 3.1311338, 4.330419), Vector3(-5.9180584, 3.1311338, 4.3029838), Vector3(-5.9221783, 3.1311338, 4.290136)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Upper Fork Point:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.297687),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(7.0897554e-10, -0.6935588, -1.6130333), Vector3(3.6952081e-09, -0.8531429, -1.6130333), Vector3(4.541888e-09, -0.89838946, -1.6130333), Vector3(4.938396e-09, -0.91957885, -1.6130333)]
}
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("model/desk/cabinet/TOPDRAWER")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0.0011700392, 0.22430347, -0.004678905, 0.3, 1, 0.0011700392, 0.22430347, -0.004678905, 0.5, 1, 0.0011700392, 0.22430347, 0.112991884)
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"release_upper_fork"
}, {
"args": [],
"method": &"count_open_drawer"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n5rqm"]
_data = {
&"RESET": SubResource("Animation_n5rqm"),
&"open_lower_drawer": SubResource("Animation_knxvx"),
&"open_upper_drawer": SubResource("Animation_l3xc0")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_t8snj"]
size = Vector3(0.29666138, 0.032196045, 0.31993866)

[sub_resource type="BoxShape3D" id="BoxShape3D_xuif5"]
size = Vector3(0.014022827, 0.10858917, 0.3195324)

[sub_resource type="BoxShape3D" id="BoxShape3D_knxvx"]
size = Vector3(0.29833984, 0.10979462, 0.015563965)

[sub_resource type="BoxShape3D" id="BoxShape3D_n5rqm"]
size = Vector3(0.29815674, 0.110458374, 0.02571106)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_knxvx"]
data = PackedVector3Array(0.5789, 0.3938, 0.62729996, -0.6856, 0.449, 0.62729996, 0.5789, 0.449, 0.62729996, 0.5789, 0.3938, 0.62729996, -0.6856, 0.3938, 0.62729996, -0.6856, 0.449, 0.62729996, -0.6856, 0.3938, 0.62729996, -0.6856, 0.449, 0.22729999, -0.6856, 0.449, 0.62729996, -0.6856, 0.3938, 0.62729996, -0.6856, 0.3938, 0.22729999, -0.6856, 0.449, 0.22729999, 0.6281, 0.3938, 0.22729999, 0.7144, 0.449, 0.22729999, 0.6281, 0.449, 0.22729999, 0.6281, 0.3938, 0.22729999, 0.7144, 0.3938, 0.22729999, 0.7144, 0.449, 0.22729999, 0.5789, 0.3938, 0.22729999, 0.6281, 0.0173, 0.22729999, 0.6281, 0.3938, 0.22729999, 0.5789, 0.3938, 0.22729999, 0.5789, 0.0173, 0.22729999, 0.6281, 0.0173, 0.22729999, -0.6856, 0.3938, 0.22729999, 0.5789, 0.3938, 0.22729999, 0.5789, 0.449, 0.22729999, -0.6856, 0.3938, 0.22729999, 0.5789, 0.449, 0.22729999, -0.6856, 0.449, 0.22729999, 0.7144, 0.3938, 0.22729999, 0.7144, 0.449, 0.62729996, 0.7144, 0.449, 0.22729999, 0.7144, 0.3938, 0.22729999, 0.7144, 0.3938, 0.62729996, 0.7144, 0.449, 0.62729996, 0.6281, 0.3938, 0.62729996, 0.7144, 0.3938, 0.22729999, 0.6281, 0.3938, 0.22729999, 0.6281, 0.3938, 0.62729996, 0.7144, 0.3938, 0.62729996, 0.7144, 0.3938, 0.22729999, 0.6281, 0.449, 0.62729996, 0.7144, 0.449, 0.22729999, 0.7144, 0.449, 0.62729996, 0.6281, 0.449, 0.62729996, 0.6281, 0.449, 0.22729999, 0.7144, 0.449, 0.22729999, 0.5789, 0.449, 0.62729996, 0.6281, 0.449, 0.22729999, 0.6281, 0.449, 0.62729996, 0.5789, 0.449, 0.62729996, -0.6856, 0.449, 0.22729999, 0.6281, 0.449, 0.22729999, 0.6281, 0.449, 0.22729999, -0.6856, 0.449, 0.22729999, 0.5789, 0.449, 0.22729999, -0.6856, 0.449, 0.22729999, 0.5789, 0.449, 0.62729996, -0.6856, 0.449, 0.62729996, -0.6856, 0.3938, 0.62729996, 0.5789, 0.3938, 0.22729999, -0.6856, 0.3938, 0.22729999, -0.6856, 0.3938, 0.62729996, 0.5789, 0.3938, 0.62729996, 0.5789, 0.3938, 0.22729999, 0.6281, 0.3938, 0.22729999, 0.6281, 0.0173, 0.62729996, 0.6281, 0.3938, 0.62729996, 0.6281, 0.3938, 0.22729999, 0.6281, 0.0173, 0.22729999, 0.6281, 0.0173, 0.62729996, 0.5789, 0.3938, 0.22729999, 0.6281, 0.449, 0.22729999, 0.5789, 0.449, 0.22729999, 0.5789, 0.3938, 0.22729999, 0.6281, 0.3938, 0.22729999, 0.6281, 0.449, 0.22729999, 0.7144, 0.3938, 0.62729996, 0.6281, 0.449, 0.62729996, 0.7144, 0.449, 0.62729996, 0.7144, 0.3938, 0.62729996, 0.6281, 0.3938, 0.62729996, 0.6281, 0.449, 0.62729996, 0.6281, 0.3938, 0.62729996, 0.5789, 0.449, 0.62729996, 0.6281, 0.449, 0.62729996, 0.6281, 0.3938, 0.62729996, 0.5789, 0.3938, 0.62729996, 0.5789, 0.449, 0.62729996, 0.5789, 0.3938, 0.62729996, 0.6281, 0.3938, 0.22729999, 0.5789, 0.3938, 0.22729999, 0.5789, 0.3938, 0.62729996, 0.6281, 0.3938, 0.62729996, 0.6281, 0.3938, 0.22729999, 0.5789, 0.3938, 0.22729999, 0.6281, 0.449, 0.22729999, 0.5789, 0.449, 0.22729999, 0.5789, 0.3938, 0.22729999, 0.6281, 0.3938, 0.22729999, 0.6281, 0.449, 0.22729999, 0.6281, 0.3938, 0.62729996, 0.5789, 0.449, 0.62729996, 0.6281, 0.449, 0.62729996, 0.6281, 0.3938, 0.62729996, 0.5789, 0.3938, 0.62729996, 0.5789, 0.449, 0.62729996, -0.2197, 0.3938, 0.22729999, -0.1705, 0.0173, 0.22729999, -0.1705, 0.3938, 0.22729999, -0.2197, 0.3938, 0.22729999, -0.2197, 0.0173, 0.22729999, -0.1705, 0.0173, 0.22729999, -0.2197, 0.3938, 0.22729999, -0.1705, 0.3938, 0.22729999, -0.1705, 0.449, 0.22729999, -0.2197, 0.3938, 0.22729999, -0.1705, 0.449, 0.22729999, -0.2197, 0.449, 0.22729999, -0.6059, 0.3938, 0.22729999, -0.5567, 0.449, 0.22729999, -0.6059, 0.449, 0.22729999, -0.6059, 0.3938, 0.22729999, -0.5567, 0.3938, 0.22729999, -0.5567, 0.449, 0.22729999, -0.6059, 0.3938, 0.22729999, -0.5567, 0.0173, 0.22729999, -0.5567, 0.3938, 0.22729999, -0.6059, 0.3938, 0.22729999, -0.6059, 0.0173, 0.22729999, -0.5567, 0.0173, 0.22729999, -0.5567, 0.3938, 0.62729996, -0.6059, 0.449, 0.62729996, -0.5567, 0.449, 0.62729996, -0.5567, 0.3938, 0.62729996, -0.6059, 0.3938, 0.62729996, -0.6059, 0.449, 0.62729996, -0.5567, 0.3938, 0.22729999, -0.5567, 0.0173, 0.62729996, -0.5567, 0.3938, 0.62729996, -0.5567, 0.3938, 0.22729999, -0.5567, 0.0173, 0.22729999, -0.5567, 0.0173, 0.62729996, -0.1705, 0.3938, 0.62729996, -0.2197, 0.449, 0.62729996, -0.1705, 0.449, 0.62729996, -0.1705, 0.3938, 0.62729996, -0.2197, 0.3938, 0.62729996, -0.2197, 0.449, 0.62729996, 0.5789, 0.0173, 0.62729996, 0.6281, 0.0173, 0.22729999, 0.5789, 0.0173, 0.22729999, 0.5789, 0.0173, 0.62729996, 0.6281, 0.0173, 0.62729996, 0.6281, 0.0173, 0.22729999, -0.6059, 0.0173, 0.62729996, -0.5567, 0.0173, 0.22729999, -0.6059, 0.0173, 0.22729999, -0.6059, 0.0173, 0.62729996, -0.5567, 0.0173, 0.62729996, -0.5567, 0.0173, 0.22729999, -0.2197, 0.0173, 0.62729996, -0.1705, 0.0173, 0.22729999, -0.2197, 0.0173, 0.22729999, -0.2197, 0.0173, 0.62729996, -0.1705, 0.0173, 0.62729996, -0.1705, 0.0173, 0.22729999, 0.6281, 0.3938, 0.62729996, 0.5789, 0.0173, 0.62729996, 0.5789, 0.3938, 0.62729996, 0.6281, 0.3938, 0.62729996, 0.6281, 0.0173, 0.62729996, 0.5789, 0.0173, 0.62729996, -0.2197, 0.3938, 0.62729996, -0.2197, 0.0173, 0.22729999, -0.2197, 0.3938, 0.22729999, -0.2197, 0.3938, 0.62729996, -0.2197, 0.0173, 0.62729996, -0.2197, 0.0173, 0.22729999, -0.1705, 0.3938, 0.62729996, -0.2197, 0.0173, 0.62729996, -0.2197, 0.3938, 0.62729996, -0.1705, 0.3938, 0.62729996, -0.1705, 0.0173, 0.62729996, -0.2197, 0.0173, 0.62729996, -0.1705, 0.3938, 0.22729999, -0.1705, 0.0173, 0.62729996, -0.1705, 0.3938, 0.62729996, -0.1705, 0.3938, 0.22729999, -0.1705, 0.0173, 0.22729999, -0.1705, 0.0173, 0.62729996, -0.5567, 0.3938, 0.62729996, -0.6059, 0.0173, 0.62729996, -0.6059, 0.3938, 0.62729996, -0.5567, 0.3938, 0.62729996, -0.5567, 0.0173, 0.62729996, -0.6059, 0.0173, 0.62729996, -0.6059, 0.3938, 0.62729996, -0.6059, 0.0173, 0.22729999, -0.6059, 0.3938, 0.22729999, -0.6059, 0.3938, 0.62729996, -0.6059, 0.0173, 0.62729996, -0.6059, 0.0173, 0.22729999, 0.5789, 0.3938, 0.62729996, 0.5789, 0.0173, 0.22729999, 0.5789, 0.3938, 0.22729999, 0.5789, 0.3938, 0.62729996, 0.5789, 0.0173, 0.62729996, 0.5789, 0.0173, 0.22729999)

[sub_resource type="BoxShape3D" id="BoxShape3D_l3xc0"]
size = Vector3(3.4611816, 0.29925537, 4.0097046)

[sub_resource type="BoxShape3D" id="BoxShape3D_ajsne"]
size = Vector3(3.3971558, 1.1929932, 0.053560257)

[sub_resource type="BoxShape3D" id="BoxShape3D_j6p6g"]
size = Vector3(0.768589, 3.7724304, 0.05565262)

[sub_resource type="BoxShape3D" id="BoxShape3D_gswoc"]
size = Vector3(3.4328575, 1.4649048, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_knxvx"]
radius = 2.1723726

[node name="Desk" type="StaticBody3D"]
script = ExtResource("1_t8snj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n5rqm")
}

[node name="model" parent="." instance=ExtResource("1_1r5t1")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="desk" parent="model" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.22766994)

[node name="cabinet" parent="model/desk" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.003661573, -0.0030688345, 0.02701731)

[node name="BOTTOMDRAWER" parent="model/desk/cabinet" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0009238124, -0.22289889, -0.002788186)

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="model/desk/cabinet/BOTTOMDRAWER" index="0"]
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="model/desk/cabinet/BOTTOMDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.39286804, 0.2822723, 0.46139145)
shape = SubResource("BoxShape3D_t8snj")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="model/desk/cabinet/BOTTOMDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.53361744, 0.32140326, 0.46242046)
shape = SubResource("BoxShape3D_xuif5")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="model/desk/cabinet/BOTTOMDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25086573, 0.3213226, 0.46308136)
shape = SubResource("BoxShape3D_xuif5")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="model/desk/cabinet/BOTTOMDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3918457, 0.32116315, 0.30892944)
shape = SubResource("BoxShape3D_knxvx")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="model/desk/cabinet/BOTTOMDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3925476, 0.32094574, 0.6102373)
shape = SubResource("BoxShape3D_n5rqm")

[node name="TOPDRAWER" parent="model/desk/cabinet" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0011700392, 0.22430347, -0.004678905)

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="model/desk/cabinet/TOPDRAWER" index="0"]
sync_to_physics = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="model/desk/cabinet/TOPDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.39199832, 0.056302562, 0.46704295)
shape = SubResource("BoxShape3D_t8snj")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="model/desk/cabinet/TOPDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5336175, 0.09543355, 0.46750262)
shape = SubResource("BoxShape3D_xuif5")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="model/desk/cabinet/TOPDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2508657, 0.09535287, 0.4680653)
shape = SubResource("BoxShape3D_xuif5")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="model/desk/cabinet/TOPDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.39184573, 0.0951934, 0.31391338)
shape = SubResource("BoxShape3D_knxvx")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="model/desk/cabinet/TOPDRAWER/AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.39254764, 0.09497596, 0.6152214)
shape = SubResource("BoxShape3D_n5rqm")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, -2.2766993)
shape = SubResource("ConcavePolygonShape3D_knxvx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8912354, 0.30742896, 1.987885)
shape = SubResource("BoxShape3D_l3xc0")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8912354, 3.8203797, 1.987885)
shape = SubResource("BoxShape3D_l3xc0")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8837585, 2.06073, 3.9671755)
shape = SubResource("BoxShape3D_ajsne")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.086546, 2.0433807, 3.9755006)
shape = SubResource("BoxShape3D_j6p6g")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.6932783, 2.0433807, 3.9690251)
shape = SubResource("BoxShape3D_j6p6g")

[node name="Lower Fork Point" type="Node3D" parent="."]
transform = Transform3D(-0.032469533, 0.76828986, -0.6392777, -0.99910766, -0.042224403, -7.089753e-10, -0.026993118, 0.6387076, 0.76897556, -5.878234, 0.9387481, 4.427182)
script = ExtResource("3_xuif5")
item_group = "fork"

[node name="Area3D" type="Area3D" parent="Lower Fork Point"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lower Fork Point/Area3D"]
transform = Transform3D(-0.03246955, -0.99910796, -0.026993133, 0.7682899, -0.042224403, 0.63870776, -0.6392778, -1.8626447e-09, 0.7689758, -0.07762647, 1.2382791, -1.6285157)
shape = SubResource("BoxShape3D_gswoc")
debug_color = Color(0.92905486, 3.1862557e-05, 0.66422683, 0.41960785)

[node name="Upper Fork Point" type="Node3D" parent="."]
transform = Transform3D(-0.032469537, 0.7682897, -0.63927776, -0.9991078, -0.042224392, -7.0897543e-10, -0.026993122, 0.63870746, 0.7689757, -5.878234, 3.1311338, 4.427182)
script = ExtResource("3_xuif5")
item_group = "fork"

[node name="Area3D" type="Area3D" parent="Upper Fork Point"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Upper Fork Point/Area3D"]
transform = Transform3D(-0.03246955, -0.99910796, -0.026993133, 0.7682899, -0.042224403, 0.63870776, -0.6392778, -1.8626447e-09, 0.7689758, -0.07762647, 1.2382791, -1.6285157)
shape = SubResource("BoxShape3D_gswoc")
debug_color = Color(0.92905486, 3.1862557e-05, 0.66422683, 0.41960785)

[node name="Lower Shelf Point" type="Node3D" parent="."]
transform = Transform3D(-4.371139e-08, -3.5555593e-15, 1, 0.22804499, 0.97365063, 9.968167e-09, -0.97365063, 0.22804499, -4.255962e-08, -3.930903, 1.0801816, 9.5531025)
script = ExtResource("3_xuif5")
item_group = "shelf"
snap_point_active = false

[node name="Area3D" type="Area3D" parent="Lower Shelf Point"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lower Shelf Point/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 2.1316282e-14, 5.3290705e-15, 1, 2.7443886, -1.2471938, 7.1525574e-07)
shape = SubResource("SphereShape3D_knxvx")

[node name="Upper Shelf Point" type="Node3D" parent="."]
transform = Transform3D(-4.371139e-08, -1.8953444e-15, 1, 0.5852125, 0.81088006, 2.5580446e-08, -0.81088006, 0.5852125, -3.54447e-08, -3.938043, 3.4861028, 5.6251044)
script = ExtResource("3_xuif5")
item_group = "shelf"
snap_point_active = false

[node name="Area3D" type="Area3D" parent="Upper Shelf Point"]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Upper Shelf Point/Area3D"]
transform = Transform3D(0.9229684, 0.38487533, -3.3671483e-09, -0.38487533, 0.9229684, -1.6823423e-08, -3.3671448e-09, 1.6823435e-08, 1, -2.540139, -1.8595676, 0.0071406364)
shape = SubResource("SphereShape3D_knxvx")

[connection signal="snap_point_filled" from="Lower Fork Point" to="." method="on_lower_fork_placed"]
[connection signal="body_entered" from="Lower Fork Point/Area3D" to="Lower Fork Point" method="_on_area_3d_body_entered"]
[connection signal="snap_point_filled" from="Upper Fork Point" to="." method="on_upper_fork_placed"]
[connection signal="body_entered" from="Upper Fork Point/Area3D" to="Upper Fork Point" method="_on_area_3d_body_entered"]
[connection signal="snap_point_filled" from="Lower Shelf Point" to="." method="on_lower_shelf_placed"]
[connection signal="body_entered" from="Lower Shelf Point/Area3D" to="Lower Shelf Point" method="_on_area_3d_body_entered"]
[connection signal="snap_point_filled" from="Upper Shelf Point" to="." method="on_upper_shelf_placed"]
[connection signal="body_entered" from="Upper Shelf Point/Area3D" to="Upper Shelf Point" method="_on_area_3d_body_entered"]

[editable path="model"]
